<resources>

    <string name="app_name">Tinder App</string>

    //info account
    <string name="email">Email</string>
    <string name="emailHint">Email</string>
    <string name="create_password">Create password</string>
    <string name="password">Password</string>

    //info both
    <string name="looking_for">Looking for</string>
    <string name="min">Min</string>
    <string name="max">Max</string>

    //info student
    <string name="create_account_3_student">Create Account 3 Student</string>
    <string name="first_name">First Name</string>
    <string name="school">School</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="hobby_one">Hobby #1</string>
    <string name="hobby_two">Hobby #2</string>
    <string name="hobby_three">Hobby #3</string>
    <string name="study">Study</string>
    <string name="about_me_description">Write a short description of yourself here</string>
    <string name="about_me">About me</string>
    <string name="day">Day</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="hobbies">Hobbies</string>
    <string name="date_of_birth">Date of birth</string>

    <string name="upload_photos_of_you">Upload photos of you</string>

    //info house
    <string name="address">Address</string>
    <string name="address_hint">Street, House number</string>
    <string name="name_house">House name</string>
    <string name="rent_per_month">Rent per month</string>
    <string name="size_room">Size of room m^2</string>
    <string name="number_of_housemates">Number of housemates</string>
    <string name="rent_hint">euros</string>
    <string name="size_hint">m^2</string>
    <string name="text_house_button">I am looking for a house</string>
    <string name="text_housemate_button">I am looking for a housemate</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_us">About us</string>
    <string name="about_us_description">Write a short description of your house here</string>

    <string name="upload_photos_of_room">Upload photos of room</string>
    <string name="upload_photos_of_housemates">Upload photos of housemates</string>

    <string name="age">Age</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Main navigation
    <string name="settings">Settings</string>
    <string name="slide">Slide</string>
    <string name="messages">Messages</string>
    <string name="title_activity_create_account">CreateAccount</string>


    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="finder">FINDER</string>


</resources>
