<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/progressStudentAccount"
            style="@style/ProgressBarStyle"
            app:spb_animateToCurrentProgressState="true"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="@color/colorPrimary"
            app:spb_currentStateNumber="two"
            app:spb_maxStateNumber="four"
            app:spb_stateBackgroundColor="@color/colorEditText"
            app:spb_stateDescriptionColor="@color/colorEditText"
            app:spb_stateForegroundColor="@color/colorPrimary"
            app:spb_stateNumberForegroundColor="@color/common_google_signin_btn_text_dark_default"
            app:spb_stateTextSize="@dimen/text_size_progress" />

        <TextView
            style="@style/BasicTextStyle"
            android:text="@string/name_house" />

        <EditText
            android:id="@+id/NameHouse"
            style="@style/EditTextStyle"
            android:hint="@string/name_house"
            android:inputType="textPersonName" />

        <TextView
            style="@style/BasicTextStyle"
            android:text="@string/address" />

        <EditText
            android:id="@+id/Address"
            android:hint="@string/address_hint"
            android:inputType="textPersonName"
            style="@style/EditTextStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                style="@style/BasicTextStyle"
                android:text="@string/rent_per_month"
                android:layout_alignParentLeft="true" />

            <TextView
                style="@style/BasicTextStyle"
                android:text="@string/size_room"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Rent"
                android:layout_width="150dp"
                style="@style/EditTextStyle"
                android:hint="@string/rent_hint"
                android:inputType="number" />

            <EditText
                android:id="@+id/Size"
                android:layout_width="150dp"
                style="@style/EditTextStyle"
                android:hint="@string/size_hint"
                android:layout_alignParentRight="true"
                android:inputType="number" />

        </RelativeLayout>

        <TextView
            style="@style/BasicTextStyle"
            android:text="@string/number_of_housemates"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/NumberHousemates"
            android:layout_width="150dp"
            style="@style/EditTextStyle"
            android:hint="@string/number_of_housemates"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/about_us" />

        <EditText
            android:id="@+id/AboutMe"
            android:layout_height="120dp"
            style="@style/EditTextStyle"
            android:hint="@string/about_us_description"
            android:gravity="top"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:padding="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/ButtonBackCA3House"
            style="@style/ButtonStyle"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/space_between_buttons"/>

        <Button
            android:id="@+id/ButtonNextCA3House"
            style="@style/ButtonStyle"
            android:text="@string/next"
            android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>