<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/progressStudentAccount"
            style="@style/ProgressBarStyle"
            app:spb_animateToCurrentProgressState="true"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="@color/colorPrimary"
            app:spb_currentStateNumber="one"
            app:spb_maxStateNumber="four"
            app:spb_stateBackgroundColor="@color/colorEditText"
            app:spb_stateDescriptionColor="@color/colorEditText"
            app:spb_stateForegroundColor="@color/colorPrimary"
            app:spb_stateNumberForegroundColor="@color/common_google_signin_btn_text_dark_default"
            app:spb_stateTextSize="@dimen/text_size_progress" />

        <TextView
            style="@style/BasicTextStyle"
            android:text="@string/email" />

        <EditText
            android:id="@+id/Email"
            style="@style/EditTextStyle"
            android:hint="@string/emailHint"
            android:inputType="textPersonName" />

        <TextView
            style="@style/BasicTextStyle"
            android:text="@string/create_password" />

        <EditText
            android:id="@+id/Password"
            style="@style/EditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:padding="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/ButtonBackCA1House"
            style="@style/ButtonStyle"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/space_between_buttons"/>

        <Button
            android:id="@+id/ButtonNextCA1House"
            style="@style/ButtonStyle"
            android:text="@string/next"
            android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>