<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeInformation"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/NameStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <RadioGroup
                    android:id="@+id/RadioGroupMaleFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/Male"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorButton"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/Female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorButton"
                        android:text="@string/female" />

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/school" />

                <EditText
                    android:id="@+id/SchoolStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/school"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/study" />

                <EditText
                    android:id="@+id/StudyStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/study"
                    android:inputType="text" />

                <RadioGroup
                    android:id="@+id/RadioGroupBscMsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/Bachelor"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Bachelor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorButton"
                        android:text="@string/bachelor" />

                    <RadioButton
                        android:id="@+id/Master"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorButton"
                        android:text="@string/master" />

                </RadioGroup>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/hobbies" />

                <EditText
                    android:id="@+id/Hobby1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/hobby_one"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/Hobby2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/hobby_two"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/Hobby3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/hobby_three"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/about_me" />

                <EditText
                    android:id="@+id/AboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:layout_marginBottom="20sp"
                    android:background="@color/colorEditText"
                    android:hint="@string/about_me_description"
                    android:gravity="top"
                    android:inputType="text" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:padding="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/ButtonBackChangeInformation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/back"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/space_between_buttons"
            android:onClick="goToMainNavigationStudent"
            />

        <Button
            android:id="@+id/ButtonSafeInformation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:text="@string/save"
            android:layout_weight="1"
            android:onClick="goToMainNavigationStudentWithSave"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>