<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount3House">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20sp"
            tools:context=".CreateAccount3Student">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/name_house"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/NameHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@color/colorEditText"
                android:hint="@string/name_house"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/NameHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@color/colorEditText"
                android:hint="@string/address_hint"
                android:inputType="textPersonName" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent_per_month"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_room"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Rent"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorEditText"
                    android:hint="@string/rent_hint"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/Size"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorEditText"
                    android:hint="@string/size_hint"
                    android:layout_alignParentRight="true"
                    android:inputType="number" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/number_of_housemates"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/NumberHousemates"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@color/colorEditText"
                android:hint="@string/number_of_housemates"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/about_us" />

            <EditText
                android:id="@+id/AboutMe"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginBottom="20sp"
                android:background="@color/colorEditText"
                android:hint="@string/about_us_description"
                android:gravity="top"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorButton"
                android:onClick="goToCreateAccount2"
                android:text="@string/back" />

            <Button
                android:id="@+id/nextCreateAccount3House"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorButton"
                android:onClick="goToCreateAccount4House"
                android:text="@string/next"
                android:textStyle="normal" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>